--- a/Gnoquis/Storyboards/Base.lproj/Main.storyboard
+++ b/Gnoquis/Storyboards/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13147.4"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -36,44 +37,41 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uzo-En-ciz">
-                                                    <rect key="frame" x="100" y="9" width="267" height="28"/>
+                                                    <rect key="frame" x="100" y="9" width="267" height="22"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profession" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IeP-5H-6Qb">
-                                                    <rect key="frame" x="100" y="41" width="267" height="18"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="18" id="511-7V-He2"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="100" y="35" width="267" height="18"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jfr-Gd-Muo">
-                                                    <rect key="frame" x="8" y="8" width="70" height="70"/>
+                                                    <rect key="frame" x="8" y="4" width="70" height="70"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="70" id="dte-Bm-B3Q"/>
-                                                        <constraint firstAttribute="width" constant="70" id="pH3-RZ-YPY"/>
+                                                        <constraint firstAttribute="width" constant="70" id="kKM-4f-OvY"/>
                                                     </constraints>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                             <integer key="value" value="35"/>
                                                         </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="debugFaceAware" value="YES"/>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="focusOnFaces" value="YES"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="leading" secondItem="IeP-5H-6Qb" secondAttribute="leading" id="4V0-Jd-6Fe"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="IeP-5H-6Qb" secondAttribute="bottom" constant="12.5" id="4lb-rK-Ncd"/>
-                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="trailing" secondItem="IeP-5H-6Qb" secondAttribute="trailing" id="8zw-io-gJl"/>
-                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="top" secondItem="wHz-uO-MbQ" secondAttribute="topMargin" constant="1" id="D0O-sY-2Zo"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Jfr-Gd-Muo" secondAttribute="bottom" constant="-6.5" id="E7x-3y-uAA"/>
-                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="top" secondItem="wHz-uO-MbQ" secondAttribute="topMargin" id="Qmv-iK-tK7"/>
-                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="trailing" secondItem="wHz-uO-MbQ" secondAttribute="trailingMargin" id="SId-nG-cAS"/>
-                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="leading" secondItem="wHz-uO-MbQ" secondAttribute="leadingMargin" id="YRs-SN-mZb"/>
-                                                <constraint firstItem="IeP-5H-6Qb" firstAttribute="top" secondItem="Uzo-En-ciz" secondAttribute="bottom" constant="4" id="ct0-mc-pbl"/>
-                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="leading" secondItem="Jfr-Gd-Muo" secondAttribute="trailing" constant="22" id="qGV-B4-AAJ"/>
+                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="top" secondItem="wHz-uO-MbQ" secondAttribute="topMargin" constant="-4" id="4ab-CM-i81"/>
+                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="leading" secondItem="wHz-uO-MbQ" secondAttribute="leadingMargin" id="CCZ-f9-Uy4"/>
+                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="trailing" secondItem="wHz-uO-MbQ" secondAttribute="trailingMargin" id="EYZ-CH-Qcz"/>
+                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="trailing" secondItem="IeP-5H-6Qb" secondAttribute="trailing" id="KTn-Hb-1SZ"/>
+                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="leading" secondItem="Jfr-Gd-Muo" secondAttribute="trailing" constant="22" id="MVS-qN-0yn"/>
+                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="leading" secondItem="IeP-5H-6Qb" secondAttribute="leading" id="MZo-4z-OG6"/>
+                                                <constraint firstItem="IeP-5H-6Qb" firstAttribute="top" secondItem="Uzo-En-ciz" secondAttribute="bottom" constant="4" id="QjR-ws-lAx"/>
+                                                <constraint firstItem="Jfr-Gd-Muo" firstAttribute="centerY" secondItem="wHz-uO-MbQ" secondAttribute="centerY" id="dBx-JQ-Jxh"/>
+                                                <constraint firstItem="Uzo-En-ciz" firstAttribute="top" secondItem="wHz-uO-MbQ" secondAttribute="topMargin" constant="1" id="pTf-FQ-tQe"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -116,6 +114,9 @@
                                     <constraint firstAttribute="width" constant="343" id="QWx-Of-I3Q"/>
                                     <constraint firstAttribute="height" constant="260" id="mEs-oC-I49"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="focusOnFaces" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iaN-fA-FXS">
                                 <rect key="frame" x="16" y="324" width="343" height="343"/>
