--- a/Gnoquis/Storyboards/Base.lproj/Main.storyboard
+++ b/Gnoquis/Storyboards/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
                     <navigationItem key="navigationItem" title="Gnoquis" id="aRK-g3-TX2">
                         <barButtonItem key="leftBarButtonItem" image="Hamburger" id="2vZ-sC-e60">
                             <connections>
-                                <segue destination="THi-h7-l0t" kind="showDetail" identifier="showMenu" id="NQk-Pk-UPo"/>
+                                <segue destination="THi-h7-l0t" kind="showDetail" identifier="showMenu" id="4KI-EY-Jgl"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -197,14 +197,14 @@
         <scene sceneID="xze-y7-X8c">
             <objects>
                 <viewController id="THi-h7-l0t" customClass="MenuViewController" customModule="Gnoquis" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="DVY-Yx-QyE">
+                    <view key="view" opaque="NO" contentMode="scaleToFill" id="DVY-Yx-QyE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AfN-Dw-6bv">
-                                <rect key="frame" x="0.0" y="62" width="238" height="542"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="68" y="153" width="238" height="360"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.33333333329999998" green="0.31764705879999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="60" id="9Ay-A2-hXt" customClass="MenuViewControllerTableViewCell" customModule="Gnoquis" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="238" height="60"/>
@@ -239,16 +239,17 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="jND-Ca-XMz"/>
                     </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="238" height="360"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="AfN-Dw-6bv" id="RTE-wT-5d0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eOd-Xk-Bci" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="612" y="-578.86056971514245"/>
+            <point key="canvasLocation" x="610.39999999999998" y="-579.76011994002999"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="92N-YB-h19">
