--- a/Gnoquis/Storyboards/Base.lproj/Main.storyboard
+++ b/Gnoquis/Storyboards/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
                                             <outlet property="iconoImg" destination="Jfr-Gd-Muo" id="d3E-v2-aDC"/>
                                             <outlet property="nameLabel" destination="Uzo-En-ciz" id="0lo-LZ-aGp"/>
                                             <outlet property="professionLabel" destination="IeP-5H-6Qb" id="M9g-ui-6d7"/>
-                                            <segue destination="Cmb-we-8vC" kind="show" identifier="showGnoquiDetail" id="tfv-xj-6xg"/>
+                                            <segue destination="Cmb-we-8vC" kind="show" identifier="showGnoquiDetail" id="sEW-F2-nsF"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -104,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="612" y="138.98050974512745"/>
+            <point key="canvasLocation" x="-292" y="260"/>
         </scene>
         <!--Gnoqui Detail View Controller-->
         <scene sceneID="3RY-Db-sp8">
@@ -201,16 +201,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AfN-Dw-6bv">
-                                <rect key="frame" x="68" y="130" width="238" height="430"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" delaysContentTouches="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AfN-Dw-6bv">
+                                <rect key="frame" x="62" y="76" width="250" height="540"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.33333333329999998" green="0.31764705879999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="sectionIndexBackgroundColor" red="0.78431372549019607" green="0.85882352941176465" blue="0.070588235294117646" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="60" id="9Ay-A2-hXt" customClass="MenuViewControllerTableViewCell" customModule="Gnoquis" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="238" height="60"/>
+                                        <rect key="frame" x="0.0" y="28" width="250" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9Ay-A2-hXt" id="XNr-Do-sEm">
-                                            <rect key="frame" x="0.0" y="0.0" width="238" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="250" height="59.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jzR-r3-oUf">
@@ -221,15 +222,15 @@
                                                     <rect key="frame" x="66" y="4" width="164" height="48"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
-                                                    <state key="normal" title="Button">
-                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    </state>
+                                                    <state key="normal" title="Button"/>
                                                     <connections>
                                                         <action selector="getFilter:" destination="THi-h7-l0t" eventType="touchUpInside" id="7NA-aD-J9N"/>
+                                                        <segue destination="uHz-Kq-Pc4" kind="show" identifier="showAbout" action="showDetailViewController:sender:" id="CBM-ff-tLq"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.78431372549019607" green="0.85882352941176465" blue="0.070588235294117646" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="boton" destination="0g4-de-FgP" id="M2J-bc-Uxw"/>
                                             <outlet property="imgView" destination="jzR-r3-oUf" id="uAL-HE-nFx"/>
@@ -246,6 +247,8 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textAttributes key="titleTextAttributes">
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                    <color key="textColor" red="0.6432227076" green="0.16438125940000001" blue="0.87434979319999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <color key="textShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </textAttributes>
                                 <textAttributes key="largeTitleTextAttributes">
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
@@ -273,6 +276,52 @@
             </objects>
             <point key="canvasLocation" x="610.39999999999998" y="-579.76011994002999"/>
         </scene>
+        <!--Gnoqui About View Controller-->
+        <scene sceneID="HDA-2X-aQn">
+            <objects>
+                <viewController id="uHz-Kq-Pc4" customClass="GnoquiAboutViewController" customModule="Gnoquis" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KuS-8e-fWg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9PO-l9-iCx">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="About Gnoquis" id="rVP-uF-QpG">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="22a-nv-WgU">
+                                            <connections>
+                                                <action selector="doneButton:" destination="uHz-Kq-Pc4" id="NWA-Hl-nry"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rcosin_01" translatesAutoresizingMaskIntoConstraints="NO" id="kKd-37-SYy">
+                                <rect key="frame" x="67" y="57" width="240" height="156"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eik-HG-aeL">
+                                <rect key="frame" x="16" y="231" width="343" height="416"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="Zxl-se-DmU"/>
+                    </view>
+                    <connections>
+                        <outlet property="imgAbout" destination="kKd-37-SYy" id="tW3-Yi-2hv"/>
+                        <outlet property="navigationBar" destination="9PO-l9-iCx" id="iJ1-SP-8OG"/>
+                        <outlet property="textAbout" destination="eik-HG-aeL" id="dA3-As-0bZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="agC-yg-OPy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1390" y="-581"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="92N-YB-h19">
             <objects>
@@ -289,10 +338,11 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zlb-PU-tgM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-146" y="139"/>
+            <point key="canvasLocation" x="-292" y="-580"/>
         </scene>
     </scenes>
     <resources>
         <image name="Hamburger" width="50" height="50"/>
+        <image name="rcosin_01" width="746" height="1054"/>
     </resources>
 </document>
