--- a/Gnoquis/Storyboards/Base.lproj/Main.storyboard
+++ b/Gnoquis/Storyboards/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
                     <navigationItem key="navigationItem" title="Gnoquis" id="aRK-g3-TX2">
                         <barButtonItem key="leftBarButtonItem" image="Hamburger" id="2vZ-sC-e60">
                             <connections>
-                                <segue destination="THi-h7-l0t" kind="showDetail" identifier="showMenu" id="4KI-EY-Jgl"/>
+                                <segue destination="THi-h7-l0t" kind="show" identifier="showMenu" action="showDetailViewController:sender:" id="4KI-EY-Jgl"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -225,7 +225,7 @@
                                                     <state key="normal" title="Button"/>
                                                     <connections>
                                                         <action selector="getFilter:" destination="THi-h7-l0t" eventType="touchUpInside" id="7NA-aD-J9N"/>
-                                                        <segue destination="uHz-Kq-Pc4" kind="show" identifier="showAbout" action="showDetailViewController:sender:" id="CBM-ff-tLq"/>
+                                                        <segue destination="uHz-Kq-Pc4" kind="showDetail" identifier="showAbout" id="CBM-ff-tLq"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -297,10 +297,6 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rcosin_01" translatesAutoresizingMaskIntoConstraints="NO" id="kKd-37-SYy">
-                                <rect key="frame" x="67" y="57" width="240" height="156"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eik-HG-aeL">
                                 <rect key="frame" x="16" y="231" width="343" height="416"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -308,6 +304,10 @@
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rcosin_01" translatesAutoresizingMaskIntoConstraints="NO" id="kKd-37-SYy">
+                                <rect key="frame" x="67" y="67" width="240" height="156"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="Zxl-se-DmU"/>
